# create-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/create_mcp/: __init__.py  __main__.py  cli.py  generator.py  presets.py
src/create_mcp/templates/: __init__.py
src/create_mcp/templates/auth/src/__pkg__/: auth.py.jinja
src/create_mcp/templates/auth/tests/: test_auth.py.jinja
src/create_mcp/templates/base/: Dockerfile.jinja  LICENSE.jinja  README.md.jinja  dot-dockerignore.jinja  dot-env.example.jinja  dot-gitignore.jinja  dot-pre-commit-config.yaml.jinja  pyproject.toml.jinja
src/create_mcp/templates/base/dot-github/workflows/: ci.yml.jinja
src/create_mcp/templates/base/src/__pkg__/: __init__.py.jinja  __main__.py.jinja  app.py.jinja  server.py.jinja  settings.py.jinja
src/create_mcp/templates/base/tests/: conftest.py.jinja  test_server.py.jinja
src/create_mcp/templates/presets/agent_tools/src/__pkg__/: tools.py.jinja
src/create_mcp/templates/presets/agent_tools/tests/: test_tools.py.jinja
src/create_mcp/templates/presets/api_wrapper/src/__pkg__/: tools.py.jinja
src/create_mcp/templates/presets/api_wrapper/tests/: test_tools.py.jinja
src/create_mcp/templates/presets/db/src/__pkg__/: tools.py.jinja
src/create_mcp/templates/presets/db/tests/: test_tools.py.jinja
src/create_mcp/templates/presets/minimal/src/__pkg__/: tools.py.jinja
src/create_mcp/templates/presets/minimal/tests/: test_tools.py.jinja
tests/: test_cli.py  test_generate.py
